edition and typos :)

--- a/approximations/approximations.tex
+++ b/approximations/approximations.tex
@@ -17,6 +17,7 @@
 \input{./sections/energy}
 \input{./sections/projectile}
 \input{./sections/diffusion}
+\input{./sections/scaling}
 
 %\appendix
 
