--- a/approximations/preambule/rmbdarticle.sty
+++ b/approximations/preambule/rmbdarticle.sty
@@ -65,9 +65,13 @@ exponent-product = \cdot  % use cdot instead of times in sci notation
 %%%
 
 %%% Language and acronyms
+%\newcommand{\lingo}[1]{\textit{#1}\xspace} % scitech lingo
+%
 \newcommand{\latin}[1]{\textit{#1}\xspace} % latin lingo
-\newcommand{\lingo}[1]{\textit{#1}\xspace} % scitech lingo
+\newcommand{\lingo}[1]{\textsl{#1}\xspace} % scitech lingo
+%
 \newcommand{\aka}{\latin{aka}}             % also known as
+\newcommand{\adhoc}{\latin{ad hoc}}        % for this
 \newcommand{\apriori}{\latin{a priori}}    % a priori
 \newcommand{\conf}{\latin{cf.}}            % confer 'compare'
 \newcommand{\ca}{\latin{ca.}}              % circa
