--- a/approximations/sections/diffusion.tex
+++ b/approximations/sections/diffusion.tex
@@ -14,7 +14,8 @@ If we consider the density of, for instance, a chemical in solution, where we de
 \end{equation}
 where $\kmdiff$ is the mass diffusion coefficient.
 
-Let us imagine that we post this problem on the domain $\lpos\in \ooint{0, \infty}$ and $t > 0$. Moreover, we assume that $\conc\vat{\lpos, 0} = 0$ for all $\lpos$ (zero concentration at time zero) and we inject the chemical at $\lpos = 0$, so that $\conc\vat{0, t} = \conc_0$. We also append the boundary condition $\conc\vat{\infty, t} = 0$.
+Let us imagine that we post this problem on the domain $\ooineq{0}{\lpos}{\infty}$ %$\lpos\in \ooint{0, \infty}$ 
+and $t > 0$. Moreover, we assume that $\conc\vat{\lpos, 0} = 0$ for all $\lpos$ (zero concentration at time zero) and we inject the chemical at $\lpos = 0$, so that $\conc\vat{0, t} = \conc_0$. We also append the boundary condition $\conc\vat{\infty, t} = 0$.
 
 Now, assuming that the concentration is a function of $\elset{\lpos, t, \kmdiff, \conc_0}$, we obtain
 \beq
