--- a/approximations/preambule/rmbdmath.sty
+++ b/approximations/preambule/rmbdmath.sty
@@ -8,6 +8,9 @@
 %
 \newcommand{\beq}{\begin{equation*}}
 \newcommand{\eeq}{\end{equation*}}
+%
+\newcommand{\bneq}{\begin{equation}}
+\newcommand{\eneq}{\end{equation}}
 
 %%% Sets
 %\newcommand{\set}[1]{\mathcal{#1}}
@@ -19,7 +22,11 @@
 \newcommand{\tuple}[1]{\left[{#1}\right]}
 
 %%% Interval
-\newcommand{\ooint}[1]{\left]{#1}\right[} % open open interval
+\newcommand{\ooint}[1]{\left]{#1}\right[} % open-open interval
+
+%%% Inequalities
+\newcommand{\ooineq}[3]{{#1}<{#2}<{#3}}       % open-open inequality
+\newcommand{\ccineq}[3]{{#1}\leq{#2}\leq{#3}} % close-close inequality
 
 %%% Functions
 \newcommand{\vat}[1]{\!\tuple{#1}} % function value at
@@ -36,16 +43,16 @@
 %%% Geometric algebra
 %\newcommand{\inv}[1]{{#1}^{-1}} % inverse
 %\newcommand{\uvec}[1]{\hat{#1}} % unit vector
-%\newcommand{\iprod}{\cdot}      % inner product
+\newcommand{\iprod}{\cdot}       % inner product
 %\newcommand{\oprod}{\wedge}     % outer product
 
 %%% Geometric calculus
-%\newcommand{\gder}{\nabla} % geometric derivative
+\newcommand{\gder}{\nabla} % geometric derivative
 %
 %\let\div\relax                          % \div already def.
 %\DeclareMathOperator{\div}{div}         % divergence
-%\DeclareMathOperator{\grad}{grad}       % gradient
-%\DeclareMathOperator{\lap}{lap}         % Laplace operator
+\DeclareMathOperator{\grad}{grad}        % gradient
+\DeclareMathOperator{\lap}{lap}          % Laplace operator
 %\newcommand{\dirder}[2]{\gder_{#1}{#2}} % directional derivative
 
 %%% Derivatives
@@ -59,8 +66,9 @@
 %\newcommand{\igd}[1]{\partial_{#1}} % indexed geometric derivative
 %\newcommand{\trate}{\iod{t}}        % time rate
 %
-%\newcommand{\xpd}[2]{\dfrac{\partial{#1}}{\partial{#2}}}  % expanded partial derivative
-%\newcommand{\xod}[2]{\dfrac{\dx{#1}}{\dx{#2}}}            % expanded ordinary derivative
+\newcommand{\xpd}[2]{\dfrac{\partial{#1}}{\partial{#2}}}            % expanded partial derivative
+\newcommand{\nxpd}[3]{\dfrac{\partial^{#1}{#2}}{\partial{#3}^{#1}}} % expanded partial derivative
+\newcommand{\xod}[2]{\dfrac{\dx{#1}}{\dx{#2}}}                      % expanded ordinary derivative
 %\newcommand{\nxod}[3]{\dfrac{\dx^{#1}{#2}}{\dx{#3}^{#1}}} % n-th expanded ordinary derivative
 
 %%% Index notation
