--- a/approximations/sections/diffusion.tex
+++ b/approximations/sections/diffusion.tex
@@ -23,13 +23,13 @@ Now, assuming that the concentration is a function of $\elset{\lpos, t, \kmdiff,
 \eeq
 Thus we have the nondim quantity $\kdim = \lpos/\sqrt{\kmdiff t}$ and we have $\conc/\conc_0 = \kdimf\vat\kdim$.
 
-Plugging this expression, $\conc/\conc_0 = \kdimf\vat\kdim$, into \autoref{eq:dimensionaldiffusioneqn} and its boundary and initial conditions, we obtain
+Plugging this expression, $\conc/\conc_0 = \kdimf\vat\kdim$, into \cref{eq:dimensionaldiffusioneqn} and its boundary and initial conditions, we obtain
 \beq
-\kdimf\vat{\kdim} = 1 - \dfrac{1}{\sqrt{\pi}}\int_0^\kdim \exp\vat{-s^2/4}\,,\dx s
+\kdimf\vat{\kdim} = 1 - \dfrac{1}{\sqrt{\pi}}\int_0^\kdim \exp\vat{-s^2/4}\,\dx s
 \eeq
 and therefore we have the general solution
 \beq
-\conc\vat{\lpos, t} = \conc_0\left(1 - \dfrac{1}{\sqrt{\pi}}\int_0^{\lpos/\sqrt{\kmdiff t}}\exp\vat{-s^2/4}\,,\dx s\right)\,.
+\conc\vat{\lpos, t} = \conc_0\left(1 - \dfrac{1}{\sqrt{\pi}}\int_0^{\lpos/\sqrt{\kmdiff t}}\exp\vat{-s^2/4}\,\dx s\right)\,.
 \eeq
 
 
