--- a/approximations/preambule/rmbdarticle.sty
+++ b/approximations/preambule/rmbdarticle.sty
@@ -8,53 +8,31 @@
 \RequirePackage{amsthm}
 \RequirePackage{booktabs}
 \RequirePackage{fixltx2e}
-\RequirePackage{graphicx}                            % graphs and figures
+\RequirePackage{graphicx} % graphs and figures
 \RequirePackage{mathtools}
 \RequirePackage[version=3,arrows=pgf-filled]{mhchem}
 \RequirePackage{microtype}
 %\RequirePackage{multicol}
 %\RequirePackage{multirow}
 \RequirePackage[numbers]{natbib}
-\RequirePackage[draft, scrtime]{prelim2e}            % Final and draft versions
+\RequirePackage[draft, scrtime]{prelim2e} % Final and draft versions
 \RequirePackage{siunitx}
 \RequirePackage{tabularx}
+\RequirePackage{ucs}                      % Encoding
 \RequirePackage{xspace}
 
 %%% Fonts
-% pdflatex - first style
-% sc: true small caps. osf: old style figures
-%\RequirePackage[utf8x]{inputenc}       % utf8 encoding in source file
-%\RequirePackage[T1]{fontenc}
-%\RequirePackage[english]{babel}
-%\RequirePackage[sc,osf]{mathpazo}      % add possibly `sc` and `osf` options
-%\RequirePackage{eulervm}               % euler math
-%\RequirePackage[scaled=0.7]{beramono}  % beramono for tt
-%\RequirePackage[pdfusetitle]{hyperref} % at the end of packages
-%
 % pdflatex - second style
-\RequirePackage[utf8x]{inputenc}       % utf8 encoding in source file
-\RequirePackage[T1]{fontenc}
-\RequirePackage[english]{babel}
-\RequirePackage[pdfusetitle]{hyperref} % at the end of packages
+\RequirePackage[T1]{fontenc}               % type 1 fonts
+%\RequirePackage[fulloldstylenums]{kpfonts}% math fonts
+\RequirePackage[english]{babel}            % babel
+\RequirePackage[pdfusetitle]{hyperref}     % at the end of packages
 %
-% xetex - minion pro
-%\RequirePackage[small,euler-hat-accent]{eulervm}
-%\RequirePackage{fontspec}
-%\RequirePackage{xunicode}
-%\RequirePackage{xltxtra}
-%\setsansfont[Mapping=tex-text,Scale=0.9]{Myriad Pro}
-%\setmonofont[Mapping=tex-text,Scale=0.8]{Bitstream Vera Sans Mono}
-%\defaultfontfeatures{Numbers=OldStyle}
-%\setmainfont[Mapping=tex-text]{MinionPro-Regular}
-%\addfontfeature{Kerning=Uppercase}
-%%\RequirePackage{mathpazo}
-%\RequirePackage[xetex]{hyperref}
-
 \RequirePackage{hypcap}   % \capstart in floats
 \RequirePackage{cleveref} % autoref replacement (load at last)
 
 %%% table of contents
-%\setcounter{tocdepth}{1} % where n is the level (1 for sections only)
+\setcounter{tocdepth}{1} % where n is the level (1 for sections only)
 
 %%% siunitx setup
 \sisetup{
@@ -65,6 +43,8 @@ exponent-product = \cdot  % use cdot instead of times in sci notation
 %%%
 
 %%% Language and acronyms
+\newcommand{\scare}[1]{«\,{#1}\,»}% double french scare
+%
 %\newcommand{\lingo}[1]{\textit{#1}\xspace} % scitech lingo
 %
 \newcommand{\latin}[1]{\textit{#1}\xspace} % latin lingo
