--- a/approximations/approximations.tex
+++ b/approximations/approximations.tex
@@ -18,6 +18,7 @@
 \input{./sections/projectile}
 \input{./sections/diffusion}
 \input{./sections/scaling}
+\input{./sections/nondim}
 
 %\appendix
 
