--- a/approximations/preambule/rmbdphysics.sty
+++ b/approximations/preambule/rmbdphysics.sty
@@ -9,9 +9,10 @@
 %\newcommand{\kspring}{k}    % spring constant
 %\newcommand{\mom}{p}        % momentum
 \newcommand{\force}{f}       % force
+\newcommand{\drag}{\force}   % drag force
 \newcommand{\press}{p}       % pressure
 \newcommand{\grav}{g}        % free fall acceleration
-%\newcommand{\dens}{\rho}    % density
+\newcommand{\dens}{\rho}     % density
 %\newcommand{\dynvis}{\mu}   % dynamic viscosity
 
 %%% Indexed mechanics
