--- a/approximations/sections/biblio.bib
+++ b/approximations/sections/biblio.bib
@@ -2,12 +2,20 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for art at 2013-10-31 09:41:44 +0100 
+%% Created for art at 2014-04-24 14:59:34 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{fowler:2003,
+	Author = {A. C. Fowler},
+	Date-Added = {2014-04-24 12:58:26 +0000},
+	Date-Modified = {2014-04-24 12:59:31 +0000},
+	Publisher = {Mathematical Institute, Oxford University},
+	Title = {An Introduction to Mathematical Modeling},
+	Year = {2003}}
 
 @book{gibbings:2011,
 	Author = {J.C. Gibbings},
