--- a/approximations/sections/intro.tex
+++ b/approximations/sections/intro.tex
@@ -7,6 +7,8 @@
 \epigraph{[...] the principle known as Occam's Razor: \latin{essentia non sunt multiplicanda praeter necessitatem} (hypotheses are not to be multiplied without necessity).}{attributed to William of Ockham, quoted by R.V. Jones}{\citep[p.95]{gibbings:2011}.}
 %
 \epigraph{Only wimps specialize on the general case. Real scientists pursue examples.}{Beresford Parlett}{\citep{berry:1995}.}
+%
+\epigraph{It makes no intrinsic sense to say a quantity is small if it still has dimensions.}{A. C. Fowler}{\citep{fowler:2003}.}
 %%%
 
 [The Art of Approximation in Science and Eng. Sanjoy]
