chapter added - physeqn

--- a/approximations/preambule/rmbdarticle.sty
+++ b/approximations/preambule/rmbdarticle.sty
@@ -43,7 +43,8 @@ exponent-product = \cdot  % use cdot instead of times in sci notation
 %%%
 
 %%% Language and acronyms
-\newcommand{\scare}[1]{«\,{#1}\,»}% double french scare
+%\newcommand{\scare}[1]{«\,{#1}\,»}% double french scare
+\newcommand{\scare}[1]{``{#1}''}% double french scare
 %
 %\newcommand{\lingo}[1]{\textit{#1}\xspace} % scitech lingo
 %
