--- a/approximations/sections/intro.tex
+++ b/approximations/sections/intro.tex
@@ -9,6 +9,9 @@
 \epigraph{Only wimps specialize on the general case. Real scientists pursue examples.}{Beresford Parlett}{\citep{berry:1995}.}
 %
 \epigraph{It makes no intrinsic sense to say a quantity is small if it still has dimensions.}{A. C. Fowler}{\citep{fowler:2003}.}
+%
+\epigraph{We must think things not words, or at least we must constantly translate our words into the facts for which they stand, if we are to keep to the real and the true.}{Oliver Wendell Holmes Jr.}{:(.}
+%
 %%%
 
 [The Art of Approximation in Science and Eng. Sanjoy]
