quotes and pi theorem

--- a/approximations/sections/biblio.bib
+++ b/approximations/sections/biblio.bib
@@ -2,12 +2,28 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for art at 2014-04-24 14:59:34 +0200 
+%% Created for art at 2014-05-21 14:29:28 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{holmes:1899,
+	Author = {Oliver W. Holmes},
+	Date-Added = {2014-05-21 12:28:15 +0000},
+	Date-Modified = {2014-05-21 12:29:28 +0000},
+	Journal = {Harvard Law Review},
+	Title = {Law in Science and Science in Law},
+	Year = {1899}}
+
+@phdthesis{sanjoy:1998,
+	Author = {Sanjoy Mahajan},
+	Date-Added = {2014-05-21 12:22:02 +0000},
+	Date-Modified = {2014-05-21 12:24:01 +0000},
+	School = {California Institute of Technology},
+	Title = {Order of Magnitude Physics -- A Textbook with Applications to the Retinal Rod and to the Density of Prime Numbers},
+	Year = {1998}}
 
 @book{fowler:2003,
 	Author = {A. C. Fowler},
