--- a/curve-fitting/auxs/maths.sty
+++ b/curve-fitting/auxs/maths.sty
@@ -100,6 +100,12 @@
 \newcommand{\kron}{\delta}             % flat metric / kronecker delta
 \newcommand{\fkron}[2]{\kron_{#1#2}}   % flat metric on frame
 
+%%% Sums
+%
+\newcommand{\ssum}[2]{\sum_{#1}{#2}}                % short sum
+\newcommand{\lsum}[3]{\sum_{#1}^{#2}{#3}}           % long sum
+\newcommand{\ivsum}[3]{\sum_{#1}{#2}\,\iverson{#3}} % iverson sum
+
 %%% Other
 %
 %\DeclareMathOperator{\diag}{diag}                   % diagonal
