--- a/curve-fitting/curve-fitting.tex
+++ b/curve-fitting/curve-fitting.tex
@@ -15,7 +15,7 @@
 \begin{document}
 
 \frontMatterPageStyle
-\include{auxs/halftitle}
+%\include{auxs/halftitle}
 %\include{auxs/title}
 %\include{auxs/copyright}
 \pagestyle{scrheadings}
