edition and typos

--- a/math-toolbox/info/docinfo.tex
+++ b/math-toolbox/info/docinfo.tex
@@ -1,6 +1,6 @@
 %%% DOCUMENT INFO
 %
-\author[D. Herrera]{Diego Herrera}
+\author[Diego Herrera]{Diego Herrera}
 \title[Toolbox]{Math Tollbox}
 \date{\today}
 \keywords{math notation}% no CSV
