--- a/math-toolbox/sections/lagrange.tex
+++ b/math-toolbox/sections/lagrange.tex
@@ -607,10 +607,10 @@ Consider an $n$-dimensional Euclidean space $\espace n$. Consider a frame for $\
 \pvec = \ifvec k\comp\pvec k\,.
 \eeq
 
-Find $\dx\pvec$ and then $\dx^2\pvec = \dx\pvec\dx\pvec = \dx\pvec\iprod\dx\pvec$
+Find $\dx\pvec$ and then $\dx\pvec^2 = \dx\pvec\dx\pvec = \dx\pvec\iprod\dx\pvec$
 \beq
   \dx\pvec = \ifvec k\dx\comp\pvec k\implies
-\dx^2\pvec = \imet kl\comp\pvec k\comp\pvec l\,,
+\dx\pvec^2 = \imet kl\comp\pvec k\comp\pvec l\,,
 \eeq
 since $\ifvec k\iprod\ifvec l = \imet kl$.
 
@@ -625,7 +625,7 @@ and calculate then the particle kinetic energy $\ken$
      = \dfrac{1}{2}m\imet kl\cntens{\dt\pvec} k\cntens{\dt\pvec} l\,.
 \eeq
 
-Notice, finally, that during the calculation the metric coefficients have not changed when going from $\dx^2\pvec$ to $\ken$! That's why the trick of using the line element to find $\imet kl$ and using them directly to calculate the kinetic energy works.
+Notice, finally, that during the calculation the metric coefficients have not changed when going from $\dx\pvec^2$ to $\ken$! That's why the trick of using the line element to find $\imet kl$ and using them directly to calculate the kinetic energy works.
 
 
 
